--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,14 @@
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-picker": "^10.6.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0",
+    "react-textarea-autosize": "^8.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
