--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-checkbox-tree": "^1.8.0",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
