--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "password-validator": "^5.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-number-format": "^5.3.3",
+    "react-phone-number-input": "^3.3.9",
+    "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0",
+    "react-text-mask": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
