--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
+    "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3"
