--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
