--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-move": "^6.5.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0"
