--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-move": "^6.5.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
